ifc/imgui-glfw-vulkan.lisp

;;; This file was automatically generated by SWIG (http://www.swig.org).
;;; Version 3.0.12
;;;
;;; Do not make changes to this file unless you know what you are doing--modify
;;; the SWIG interface file instead.
(cl:in-package :vkappui)

(cl:defconstant IMGUI_VK_QUEUED_FRAMES 2)

(cffi:defcstruct ImGui_ImplGlfwVulkan_Init_Data
	(allocator :pointer)
	(gpu :pointer)
	(device :pointer)
	(render_pass :pointer)
	(pipeline_cache :pointer)
	(descriptor_pool :pointer)
	(check_vk_result :pointer))

(cffi:defcfun ("ImGui_ImplGlfwVulkan_Init" ImGui_ImplGlfwVulkan_Init) :pointer
  (window :pointer)
  (install_callbacks :pointer)
  (init_data :pointer))

(cffi:defcfun ("ImGui_ImplGlfwVulkan_Shutdown" ImGui_ImplGlfwVulkan_Shutdown) :void)

(cffi:defcfun ("ImGui_ImplGlfwVulkan_NewFrame" ImGui_ImplGlfwVulkan_NewFrame) :void)

(cffi:defcfun ("ImGui_ImplGlfwVulkan_Render" ImGui_ImplGlfwVulkan_Render) :void
  (command_buffer :pointer))

(cffi:defcfun ("ImGui_ImplGlfwVulkan_InvalidateFontUploadObjects" ImGui_ImplGlfwVulkan_InvalidateFontUploadObjects) :void)

(cffi:defcfun ("ImGui_ImplGlfwVulkan_InvalidateDeviceObjects" ImGui_ImplGlfwVulkan_InvalidateDeviceObjects) :void)

(cffi:defcfun ("ImGui_ImplGlfwVulkan_CreateFontsTexture" ImGui_ImplGlfwVulkan_CreateFontsTexture) :pointer
  (command_buffer :pointer))

(cffi:defcfun ("ImGui_ImplGlfwVulkan_CreateDeviceObjects" ImGui_ImplGlfwVulkan_CreateDeviceObjects) :pointer)

(cffi:defcfun ("ImGui_ImplGlfwVulkan_MouseButtonCallback" ImGui_ImplGlfwVulkan_MouseButtonCallback) :void
  (window :pointer)
  (button :int)
  (action :int)
  (mods :int))

(cffi:defcfun ("ImGui_ImplGlfwVulkan_ScrollCallback" ImGui_ImplGlfwVulkan_ScrollCallback) :void
  (window :pointer)
  (xoffset :double)
  (yoffset :double))

(cffi:defcfun ("ImGui_ImplGlfwVulkan_KeyCallback" ImGui_ImplGlfwVulkan_KeyCallback) :void
  (window :pointer)
  (key :int)
  (scancode :int)
  (action :int)
  (mods :int))

(cffi:defcfun ("ImGui_ImplGlfwVulkan_CharCallback" ImGui_ImplGlfwVulkan_CharCallback) :void
  (window :pointer)
  (c :unsigned-int))

(cffi:defcfun ("glfwCreateWindowSurface" glfwCreateWindowSurface) vk::VkResult
  (instance vk::VkInstance)
  (window :pointer)
  (allocator (:pointer (:struct vk::VkAllocationCallbacks)))
  (surface (:pointer vk::VkSurfaceKHR)))


